data/derived/comb/progs/unify/prog4502.ml.out
Characters 135-139:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list * 'b list
       but an expression was expected of type int
